--- a/email-templates/order-cancellation.html
+++ b/email-templates/order-cancellation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Cancelled - VENTECH</title>
+    <title>Order Cancelled - Hogtech</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -123,7 +123,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>VENTECH</h1>
+            <h1>HOGTECH</h1>
             <p>Order Cancellation Notice</p>
         </div>
         
@@ -171,11 +171,11 @@
         </div>
         
         <div class="footer">
-            <p><strong>VENTECH Gadgets</strong></p>
+            <p><strong>Hedgehog Technologies</strong></p>
             <p>Your Trusted Tech Partner | Making Tech Accessible to All</p>
             <p>
-                <a href="https://ventechgadgets.com">www.ventechgadgets.com</a> | 
-                <a href="mailto:support@ventechgadgets.com">support@ventechgadgets.com</a>
+                <a href="https://hogtechgh.com">www.hogtechgh.com</a> | 
+                <a href="mailto:support@hogtechgh.com">support@hogtechgh.com</a>
             </p>
             <p>Phone: +233 55 134 4310</p>
         </div>
