--- a/email-templates/cart-abandonment.html
+++ b/email-templates/cart-abandonment.html
@@ -14,7 +14,7 @@
           <!-- Header -->
           <tr>
             <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); padding: 40px 20px; text-align: center;">
-              <img src="{{LOGO_URL}}" alt="VENTECH" style="width: 120px; height: auto; margin-bottom: 20px;">
+              <img src="{{LOGO_URL}}" alt="Hogtech" style="width: 120px; height: auto; margin-bottom: 20px;">
               <h1 style="color: #ffffff; margin: 0; font-size: 28px; font-weight: bold;">
                 Oops! You Left Something Behind 🛒
               </h1>
@@ -102,7 +102,7 @@
             </td>
           </tr>
 
-          <!-- Why Choose VENTECH -->
+          <!-- Why Choose Hogtech -->
           <tr>
             <td style="background-color: #f9f9f9; padding: 30px;">
               <h3 style="color: #1A1A1A; font-size: 18px; margin: 0 0 20px 0; text-align: center;">
@@ -145,12 +145,12 @@
                 📞 +233 55 134 4310
               </p>
               <p style="color: #ffffff; margin: 0 0 20px 0; font-size: 13px;">
-                📧 ventechgadgets@gmail.com
+                📧 support@hogtechgh.com
               </p>
               
               <div style="border-top: 1px solid #3A3A3A; padding-top: 20px; margin-top: 20px;">
                 <p style="color: #ffffff; opacity: 0.8; margin: 0 0 10px 0; font-size: 12px;">
-                  © 2025 VENTECH. All rights reserved.
+                  © 2025 Hogtech. All rights reserved.
                 </p>
                 <p style="color: #ffffff; opacity: 0.7; margin: 0; font-size: 11px;">
                   Ho Civic Center Shop #22 & Accra, Ghana
