--- a/email-templates/magic-link.html
+++ b/email-templates/magic-link.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign In to VENTECH</title>
+  <title>Sign In to Hogtech</title>
 </head>
 <body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif; background-color: #EDEDED;">
   <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #EDEDED; padding: 40px 20px;">
@@ -15,8 +15,8 @@
           <!-- Header with Logo -->
           <tr>
             <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF8C3A 100%); padding: 40px 30px; text-align: center;">
-              <img src="https://files.ventechgadgets.com/ventech_logo_1.webp" alt="VENTECH" style="height: 50px; margin-bottom: 20px;" />
-              <h1 style="color: #FFFFFF; margin: 0; font-size: 28px; font-weight: 700;">Sign In to VENTECH</h1>
+              <img src="https://files.hogtechgh.com/hogtech_logo_primary.webp" alt="Hogtech" style="height: 50px; margin-bottom: 20px;" />
+              <h1 style="color: #FFFFFF; margin: 0; font-size: 28px; font-weight: 700;">Sign In to Hogtech</h1>
             </td>
           </tr>
 
@@ -28,7 +28,7 @@
               </p>
               
               <p style="color: #3A3A3A; font-size: 14px; line-height: 1.6; margin: 0 0 20px;">
-                Click the button below to securely sign in to your <strong>VENTECH</strong> account:
+                Click the button below to securely sign in to your <strong>Hogtech</strong> account:
               </p>
 
               <!-- CTA Button -->
@@ -60,7 +60,7 @@
           <tr>
             <td style="background-color: #1A1A1A; padding: 30px; text-align: center;">
               <p style="color: #FFFFFF; font-size: 14px; margin: 0 0 10px;">
-                <strong>VENTECH</strong> - Your Trusted Tech Partner
+                <strong>Hedgehog Technologies</strong> - Your Trusted Tech Partner
               </p>
               <p style="color: #EDEDED; font-size: 12px; margin: 0 0 20px;">
                 Making Tech Accessible to All
@@ -74,7 +74,7 @@
                       📞 +233 55 134 4310
                     </p>
                     <p style="color: #EDEDED; font-size: 12px; margin: 5px 0;">
-                      📧 ventechgadgets@gmail.com
+                      📧 support@hogtechgh.com
                     </p>
                     <p style="color: #EDEDED; font-size: 12px; margin: 5px 0;">
                       📍 Ho Civic Center Shop #22 & Accra
@@ -84,7 +84,7 @@
               </table>
 
               <p style="color: #EDEDED; font-size: 11px; margin: 20px 0 0;">
-                © 2025 VENTECH. All rights reserved.
+                © 2025 Hogtech. All rights reserved.
               </p>
             </td>
           </tr>
