--- a/email-templates/order-confirmation.html
+++ b/email-templates/order-confirmation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order Confirmation - VENTECH</title>
+  <title>Order Confirmation - Hogtech</title>
 </head>
 <body style="margin: 0; padding: 0; font-family: 'Arial', sans-serif; background-color: #f4f4f4;">
   <table role="presentation" style="width: 100%; border-collapse: collapse;">
@@ -14,7 +14,7 @@
           <!-- Header -->
           <tr>
             <td style="background: linear-gradient(135deg, #FF7A19 0%, #FF9A19 100%); padding: 40px 20px; text-align: center;">
-              <img src="{{LOGO_URL}}" alt="VENTECH" style="width: 120px; height: auto; margin-bottom: 20px;">
+              <img src="{{LOGO_URL}}" alt="Hogtech" style="width: 120px; height: auto; margin-bottom: 20px;">
               <div style="background-color: #ffffff; border-radius: 50%; width: 80px; height: 80px; margin: 0 auto 20px; display: flex; align-items: center; justify-content: center;">
                 <span style="font-size: 48px;">✅</span>
               </div>
@@ -158,7 +158,7 @@
                 📞 +233 55 134 4310
               </p>
               <p style="color: #1A1A1A; margin: 0; font-size: 15px;">
-                📧 ventechgadgets@gmail.com
+                📧 support@hogtechgh.com
               </p>
             </td>
           </tr>
@@ -167,12 +167,12 @@
           <tr>
             <td style="background-color: #1A1A1A; padding: 30px; text-align: center;">
               <p style="color: #ffffff; margin: 0 0 15px 0; font-size: 14px; font-weight: bold;">
-                Thank You for Shopping with VENTECH!
+                Thank You for Shopping with Hogtech!
               </p>
               
               <div style="border-top: 1px solid #3A3A3A; padding-top: 20px; margin-top: 20px;">
                 <p style="color: #ffffff; opacity: 0.8; margin: 0 0 10px 0; font-size: 12px;">
-                  © 2025 VENTECH. All rights reserved.
+                  © 2025 Hogtech. All rights reserved.
                 </p>
                 <p style="color: #ffffff; opacity: 0.7; margin: 0; font-size: 11px;">
                   Ho Civic Center Shop #22 & Accra, Ghana
